Last_three_days_practice.txt
E:\Ngade\Narasimha\Newfolder\Python\Python\venv\Scripts\python.exe "C:\Program Files\JetBrains\PyCharm Community Edition 2018.1.1\helpers\pydev\pydevconsole.py" 51397 51398
import sys; print('Python %s on %s' % (sys.version, sys.platform))
sys.path.extend(['E:\\Ngade\\Narasimha\\Newfolder\\Python\\Python', 'E:/Ngade/Narasimha/Newfolder/Python/Python'])
PyDev console: starting.
Python 3.6.5 (v3.6.5:f59c0932b4, Mar 28 2018, 16:07:46) [MSC v.1900 32 bit (Intel)] on win32
a = [1,2,3]
x = bytes(a)
type(x)
<class 'bytes'>
s = {1,2,3,4,5,3,4}
print(s)
{1, 2, 3, 4, 5}
type(s)
<class 'set'>
s1 = set("Welcome")
print(s1)
{'c', 'W', 'o', 'e', 'l', 'm'}
type(s1)
<class 'set'>
s.update(10)
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: 'int' object is not iterable
s.update([10])
print(s)
{1, 2, 3, 4, 5, 10}
s.remove([4])
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: unhashable type: 'list'
s.remove([4])
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: unhashable type: 'list'
s.remove([1])
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: unhashable type: 'list'
s.remove([10])
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: unhashable type: 'list'
s.remove(1)
print(s)
{2, 3, 4, 5, 10}
fs = frozenset(s)
type(fs)
<class 'frozenset'>
type(s)
<class 'set'>
fs.update([20])
Traceback (most recent call last):
  File "<input>", line 1, in <module>
AttributeError: 'frozenset' object has no attribute 'update'
dict = {'one':1,'two':2}
type(dict)
<class 'dict'>
dict.values()
dict_values([1, 2])
dict.keys()
dict_keys(['one', 'two'])
dict['one']
1
print("welcome")
welcome
 print(welcome)
  File "<input>", line 1
    print(welcome)
    ^
IndentationError: unexpected indent
a =10
b=20
print(a+b)
30
print(a-b)
-10
print(a*b)
200
pprint(a//b)
Traceback (most recent call last):
  File "<input>", line 1, in <module>
NameError: name 'pprint' is not defined
print(a//b)
0
print(a/b)
0.5
a<b
True
a>b
False
a<=b
True
c = a>b
c
False
d = a<b
d
True
c or d
True
c and d
False
c 
False
a = ['aaa',111,'bbb',222]
print('a' in a)
False
print('aaa' in a)
True
print('111' in a)
False
print(111 in a)
True
print('111' not in a)
True
a = 10
b = 20
id(a)
1384965024
id(b)
1384965184
b = 10
id(a)
1384965024
id(b)
1384965024
if id(a) is id(b):
    print(True)
else:
    print("False")
    
False
if id(a) is id(b):
    print(True)
else:
    print(False)
    
False
if(id(a) == id(b)):
    print(True)
    
True
if(id(a) == id(b)):
    print(True)
else:
    print(False)
    
True
if(id(a) == id(b)):
    print(True)
else:
    print(False)
    
True
if type(a) is 'int':
    print(True)
else:
    print(False)
    
False
type(a)
<class 'int'>
z = 10
print(type(z) is int)
True
if type(a) is int:
    print(True)
else:
    print(False)
    
True
print(bin(a))
0b1010
print(a)
10
print(oct(a))
0o12
print(hex(a))
0xa
print(~a)
-11
print(bin(~a))
-0b1011
a&b
10
a|b
10
print(a,b)
10 10
a ^ b
0
for i in range(a):
    print(i)
    
0
1
2
3
4
5
6
7
8
9
for i in range(3,a):
    print(i)
    
3
4
5
6
7
8
9
for i in range(3,a,3):
    print(i)
    
3
6
9
for i in "Welcome":
    print(i)
    
W
e
l
c
o
m
e
a = [1,2,3,4]
s = 1
for i in a:
    s +=i
    print(s)
    
2
4
7
11
for i in a:
    s *=i
    print(s)
    
11
22
66
264
for i in a:
    print(i**2)
    
1
4
9
16
b = [(i**2) for i in a]
print(b)
[1, 4, 9, 16]
s = [1,2,3,4,5,6]
if s%2 == 0:
    print("%d is even number",s)
else:
    print("%d is an odd number",s)
    
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: unsupported operand type(s) for %: 'list' and 'int'
if s%2 == 0:
    print("%d is even number",s)
else:
    print("%d is an odd number",s)
    
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: unsupported operand type(s) for %: 'list' and 'int'
if s%2 == 0:
    print(s," is even number")
else:
    print(s,"is an odd number")
    
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: unsupported operand type(s) for %: 'list' and 'int'
if int(s)%2 == 0:
    print(s," is even number")
else:
    print(s,"is an odd number")
    
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: int() argument must be a string, a bytes-like object or a number, not 'list'
student_marks = [12,3,42,34,4,2,2]
for data in student_marks:
 if( data % 2 == 0):
  print(data," is even number ")
 else:
  print(data," is odd number")
  
12  is even number 
3  is odd number
42  is even number 
34  is even number 
4  is even number 
2  is even number 
2  is even number 
if s % 2 == 0:
    print(s," is even number")
else:
    print(s,"is an odd number")
    
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: unsupported operand type(s) for %: 'list' and 'int'
for i in s:
    if s%2==0:
        print(s,"is an even number")
    else:
        print(s,"is an odd number")
Traceback (most recent call last):
  File "<input>", line 2, in <module>
TypeError: unsupported operand type(s) for %: 'list' and 'int'
for i in s:
    if(s % 2 == 0):
        print(s,"is an even number")
    else:
        print(s,"is an odd number")
Traceback (most recent call last):
  File "<input>", line 2, in <module>
TypeError: unsupported operand type(s) for %: 'list' and 'int'
for i in s:
    if(i % 2 == 0):
        print(s,"is an even number")
    else:
        print(s,"is an odd number")
[1, 2, 3, 4, 5, 6] is an odd number
[1, 2, 3, 4, 5, 6] is an even number
[1, 2, 3, 4, 5, 6] is an odd number
[1, 2, 3, 4, 5, 6] is an even number
[1, 2, 3, 4, 5, 6] is an odd number
[1, 2, 3, 4, 5, 6] is an even number
for i in s:
    if(i % 2 == 0):
        print(i,"is an even number")
    else:
        print(i,"is an odd number")
1 is an odd number
2 is an even number
3 is an odd number
4 is an even number
5 is an odd number
6 is an even number
for i in s:
    if(i % 2 == 0):
        print("%d is an even number",i)
    else:
        print("%d is an odd number",i)
%d is an odd number 1
%d is an even number 2
%d is an odd number 3
%d is an even number 4
%d is an odd number 5
%d is an even number 6
for i in s:
    if(i % 2 == 0):
        print("%d is an even number"%i)
    else:
        print("%d is an odd number"%i)
1 is an odd number
2 is an even number
3 is an odd number
4 is an even number
5 is an odd number
6 is an even number
string = ['aaaa','bbbbb','ccccc']
for i in string:
    print(i.upper())
    
AAAA
BBBBB
CCCCC
for i in string:
    print(i[0].upper()+i[1:])
    
Aaaa
Bbbbb
Ccccc
for i in string:
    print(i)
aaaa
bbbbb
ccccc
for i in string:
    print(i)
else:
    print("Loop completed!")
    
aaaa
bbbbb
ccccc
Loop completed!
for i in string:
    print(i)
    if(i == 'bbbbb'):
        break
else:
    print("Loop completed!")
    
aaaa
bbbbb
str = [1,2,3,5,7,9]
for i in str:
    if(i%2==0):
        print("List contains an even number")
        break
    else:
        print("list doesn't contain an even number")
    
list doesn't contain an even number
List contains an even number
for i in string:
    print(i)
    if(i == 'bbbbb'):
        continue
else:
    print("Loop completed!")
    
aaaa
bbbbb
ccccc
Loop completed!
while(i<10):
    i+=1
    print(i)
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: '<' not supported between instances of 'str' and 'int'
while(i < 10):
    i+=1
    print(i)
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: '<' not supported between instances of 'str' and 'int'
while(i<=10):
    print(i)
    i+=1
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: '<=' not supported between instances of 'str' and 'int'
while(p<10):
    print(p)
    p+=1
Traceback (most recent call last):
  File "<input>", line 1, in <module>
NameError: name 'p' is not defined
p=0
while(p<10):
    print(p)
    p+=1
0
1
2
3
4
5
6
7
8
9
for i in range(1,5):
    for j in range(1,10):
        print('%d * %d = %d',i,j,i*j)
    print('\n') 
%d * %d = %d 1 1 1
%d * %d = %d 1 2 2
%d * %d = %d 1 3 3
%d * %d = %d 1 4 4
%d * %d = %d 1 5 5
%d * %d = %d 1 6 6
%d * %d = %d 1 7 7
%d * %d = %d 1 8 8
%d * %d = %d 1 9 9
%d * %d = %d 2 1 2
%d * %d = %d 2 2 4
%d * %d = %d 2 3 6
%d * %d = %d 2 4 8
%d * %d = %d 2 5 10
%d * %d = %d 2 6 12
%d * %d = %d 2 7 14
%d * %d = %d 2 8 16
%d * %d = %d 2 9 18
%d * %d = %d 3 1 3
%d * %d = %d 3 2 6
%d * %d = %d 3 3 9
%d * %d = %d 3 4 12
%d * %d = %d 3 5 15
%d * %d = %d 3 6 18
%d * %d = %d 3 7 21
%d * %d = %d 3 8 24
%d * %d = %d 3 9 27
%d * %d = %d 4 1 4
%d * %d = %d 4 2 8
%d * %d = %d 4 3 12
%d * %d = %d 4 4 16
%d * %d = %d 4 5 20
%d * %d = %d 4 6 24
%d * %d = %d 4 7 28
%d * %d = %d 4 8 32
%d * %d = %d 4 9 36
for i in range(1,5):
    for j in range(1,10):
        print('%d * %d = %d'%(i,j,i*j))
    print('\n') 
1 * 1 = 1
1 * 2 = 2
1 * 3 = 3
1 * 4 = 4
1 * 5 = 5
1 * 6 = 6
1 * 7 = 7
1 * 8 = 8
1 * 9 = 9
2 * 1 = 2
2 * 2 = 4
2 * 3 = 6
2 * 4 = 8
2 * 5 = 10
2 * 6 = 12
2 * 7 = 14
2 * 8 = 16
2 * 9 = 18
3 * 1 = 3
3 * 2 = 6
3 * 3 = 9
3 * 4 = 12
3 * 5 = 15
3 * 6 = 18
3 * 7 = 21
3 * 8 = 24
3 * 9 = 27
4 * 1 = 4
4 * 2 = 8
4 * 3 = 12
4 * 4 = 16
4 * 5 = 20
4 * 6 = 24
4 * 7 = 28
4 * 8 = 32
4 * 9 = 36
